--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,37 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding: 8px;
+  margin-bottom: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 16px 16px 8px 8px;
+  font-size: 15px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  margin: 8px auto;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  text-align: center;
+  margin: auto;
+  display: block;
+  padding: 10px;
 }
