--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
 .logo {
@@ -9,11 +13,28 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px 0px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+}
+
+.left-links ul{
+ /* align-items: center;*/
+  display: flex;
+}
+
+.right-links ul{
+  display: flex;
+ /* align-items: flex-;*/
+}
+
+li {
+  margin: 5px;
 }
 
 a {
