--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,30 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+}
+
+.link-menu {
+  display: flex;
+}
+
+.not-menu {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.links {
+  display: flex;
+  gap: 30px;
+}
+
+.notifications {
+  padding: px 30px;
+  margin: auto;
 }
 
 .profile-image {
@@ -27,6 +51,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +70,5 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
 }
