--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,23 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:32px
+}
+
+.section {
+  display: flex;
+  gap: 50px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  align-items: center;
+  text-align: center;
+}
