--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,34 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 12px;
+}
+
+.header-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-betwee;
+}
+
+.icon {
+  flex-shrink: 0;
+  margin: 0px 12px;
+}
+
+.item-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.text {
+  padding: 10px 0px;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .icon {
