--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -16,6 +16,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
+  margin: 12px 0px;
 }
 
 input {
@@ -23,4 +25,44 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+;
+}
+
+.content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  flex: 1;
+}
+
+.header, .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 12px 12px;
+}
+
+.footer {
+  background-color: #eeeeee;
+  flex-shrink: 0;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap:8px;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
 }
